www/its_theme.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,900&display=swap');
html{
	font-family:sans-serif;
	-ms-text-size-adjust:100%;
	-webkit-text-size-adjust:100%
}

body{
	margin:0;
}

#cont_head {
	position: static;
	height: 66.5px;
}

#header {
	position: static;
	width: 100vw;
	height: 66.5px;
	background-color: #00cc00;
}

#headtext {
	color: white;
	margin-bottom: 20px;
}

div #headtext:after {
	content: '';
	position: absolute;
	z-index: -1;
	left: 0px;
	top: 0px;
	width: 100vw;
	/*height: 100%;*/
	height: 124px;
	background-color: #0075B0;
	border-bottom: 5px solid #F4F7F9;
}

@media only screen and (max-width: 600px) {
	div #headtext:after {
		height: 140px;
		border-bottom: 0;
	}
}

.datatables thead {
	background-color: #003865;
	color: #ffffff;
}

table.dataTable.no-footer {
	border-bottom: 1px solid #003865;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
	    font-family: "Roboto Slab", "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.irs .irs-to, .irs .irs-from, .irs .irs-single, .irs .irs-bar-edge, .irs .irs-bar {
	background: #003865;
}

.well {
	background-color: #ffffff;
	border-radius: 10px;
	min-height:20px;
	padding:19px;
	margin-bottom:20px;
	border:2px solid #003865;
	-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,0.05);
	box-shadow:inset 0 1px 1px rgba(0,0,0,0.05)
}

article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{
display:block
}

audio,canvas,progress,video{
	display:inline-block;
	vertical-align:baseline
}

audio:not([controls]){
	display:none;
	height:0
}

[hidden],template{
	display:none
}

a{
	background-color:transparent
}

a:active,a:hover{
	outline:0
}

abbr[title]{
	border-bottom:1px dotted
}

b,strong{
	font-weight:bold
}

dfn{
	font-style:italic
}

h1{
	font-size:2em;
	margin:0.67em 0
}

mark{
	background:#ff0;
	color:#000
}

small{
	font-size:80%
}

sub,sup{
	font-size:75%;
	line-height:0;
	position:relative;
	vertical-align:baseline
}

sup{
	top:-0.5em
}

sub{
	bottom:-0.25em
}

img{
	border:0
}

svg:not(:root){
	overflow:hidden
}

figure{
	margin:1em 40px
}

hr{
	-webkit-box-sizing:content-box;
	-moz-box-sizing:content-box;
	box-sizing:content-box;
	height:0
}

pre{
	overflow:auto
}

code,kbd,pre,samp{
	font-family:monospace, monospace;
	font-size:1em
}

button,input,optgroup,select,textarea{
	color:inherit;
	font:inherit;
	margin:0
}

button{
	overflow:visible
}

button,select{
	text-transform:none
}

button,html input[type="button"],input[type="reset"],input[type="submit"]{
	-webkit-appearance:button;
	cursor:pointer
}

button[disabled],html input[disabled]{
	cursor:default
}

button::-moz-focus-inner,input::-moz-focus-inner{
	border:0;
	padding:0
}

input{
	line-height:normal
}

input[type="checkbox"],input[type="radio"]{
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	box-sizing:border-box;
	padding:0
}

input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{
	height:auto
}

input[type="search"]{
	-webkit-appearance:textfield;
	-webkit-box-sizing:content-box;
	-moz-box-sizing:content-box;
	box-sizing:content-box
}

input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{
	-webkit-appearance:none
}

fieldset{
	border:1px solid #c0c0c0;
	margin:0 2px;
	padding:0.35em 0.625em 0.75em
}

legend{
	border:0;
	padding:0
}

textarea{
	overflow:auto
}

optgroup{
	font-weight:bold
}

table{
	border-collapse:collapse;
	border-spacing:0
}

td,th{
	padding:0
}

/*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */@media print{
	*,*:before,*:after{
	background:transparent !important;
	color:#000 !important;
	-webkit-box-shadow:none !important;
	box-shadow:none !important;
	text-shadow:none !important
}

a,a:visited{
	text-decoration:underline
}

a[href]:after{
	content:" (" attr(href) ")"
}

abbr[title]:after{
	content:" (" attr(title) ")"
}

a[href^="#"]:after,a[href^="javascript:"]:after{
	content:""
}

pre,blockquote{
	border:1px solid #999;
	page-break-inside:avoid
}

thead{
	display:table-header-group
}

tr,img{
	page-break-inside:avoid
}

img{
	max-width:100% !important
}

p,h2,h3{
	orphans:3;
	widows:3
}

h2,h3{
	page-break-after:avoid
}

.navbar{
	display:none
}

.btn>.caret,.dropup>.btn>.caret{
	border-top-color:#000 !important
}

.label{
	border:1px solid #000
}

.table{
	border-collapse:collapse !important
}

.table td,.table th{
	background-color:#fff !important
}

.table-bordered th,.table-bordered td{
	border:1px solid #ddd !important
}


}

@font-face{
	font-family:'Glyphicons Halflings';
	src:url('../fonts/glyphicons-halflings-regular.eot');
	src:url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'),url('../fonts/glyphicons-halflings-regular.woff') format('woff'),url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'),url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg')
}

.glyphicon{
	position:relative;
	top:1px;
	display:inline-block;
	font-family:'Glyphicons Halflings';
	font-style:normal;
	font-weight:normal;
	line-height:1;
	-webkit-font-smoothing:antialiased;
	-moz-osx-font-smoothing:grayscale
}

.glyphicon-asterisk:before{
	content:"\002a"
}

.glyphicon-plus:before{
	content:"\002b"
}

.glyphicon-euro:before,.glyphicon-eur:before{
	content:"\20ac"
}

.glyphicon-minus:before{
	content:"\2212"
}

.glyphicon-cloud:before{
	content:"\2601"
}

.glyphicon-envelope:before{
	content:"\2709"
}

.glyphicon-pencil:before{
	content:"\270f"
}

.glyphicon-glass:before{
	content:"\e001"
}

.glyphicon-music:before{
	content:"\e002"
}

.glyphicon-search:before{
	content:"\e003"
}

.glyphicon-heart:before{
	content:"\e005"
}

.glyphicon-star:before{
	content:"\e006"
}
/* ... */

